--- a/css/Practice.css
+++ b/css/Practice.css
@@ -31,16 +31,45 @@ color: rgb(100,100,90);}
 
 
 /* Opacity: */
-#Sqr1{
+#sqr1{
   height: 200px;
   width: 200px;
   background-color: #ee3e80;
-  opacity: 0.5;}
 }
 
-#Sqr2{
+#sqr2{
+  position: relative;
+  left: 100px;
+  bottom: 100px;
   height: 200px;
   width: 200px;
-  background-color: rgb(0,0,0);
-  opacity: 0.5;}
+  background-color: black;
+  opacity: 0.5;
 }
+
+/* Text: */
+
+.example{
+  line-height: 1.4em;
+  font-family: arial;
+}
+
+#txthead{
+  font-size: 150%;
+  text-transform: uppercase;
+  letter-spacing: 0.2em;
+  font-weight: bold;
+}
+#langs{
+  font-style: italic;
+}
+
+#name{
+  text-decoration:underline;
+}
+
+#newline:first-letter{
+  font-size: 200%;}
+
+#newline:first-line{
+  font-weight: bold;}
