Learning some JS. Created a local host server =)

--- a/css/Practice.css
+++ b/css/Practice.css
@@ -91,11 +91,11 @@ color: rgb(100,100,90);}
   padding: 5px;
   margin: 0px;}
 
-* { outline: 2px dotted red; }
+/** { outline: 2px dotted red; }
 * * { outline: 2px dotted green; }
 * * * { outline: 2px dotted orange; }
 * * * * { outline: 2px dotted blue; }
 * * * * * { outline: 1px solid red; }
 * * * * * * { outline: 1px solid green; }
 * * * * * * * { outline: 1px solid orange; }
-* * * * * * * * { outline: 1px solid blue; }
+* * * * * * * * { outline: 1px solid blue; }*/
